add new 3nd line

--- a/myfile.html
+++ b/myfile.html
@@ -8,5 +8,6 @@
   <body>
     <h1>this is my file Don't touch it.</h1>
     <h1>this is my file Don't touch it.</h1>
+    <h1>this is my file Don't touch it.</h1>
   </body>
 </html>
